# Ark

./: AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.ark/: .installed.json  workflow.md
.ark/specs/features/: INDEX.md
.ark/specs/features/ark-agent-namespace/: SPEC.md
.ark/specs/features/ark-context/: SPEC.md
.ark/specs/features/ark-upgrade/: SPEC.md
.ark/specs/features/codex-support/: SPEC.md
.ark/tasks/archive/2026-04/ark-agent-namespace/: 00_PLAN.md  00_REVIEW.md  01_PLAN.md  01_REVIEW.md  PRD.md  VERIFY.md  task.toml
.ark/tasks/archive/2026-04/ark-context/: 00_PLAN.md  00_REVIEW.md  01_PLAN.md  01_REVIEW.md  02_PLAN.md  02_REVIEW.md  PRD.md  VERIFY.md  task.toml
.ark/tasks/archive/2026-04/ark-upgrade/: 00_PLAN.md  00_REVIEW.md  01_PLAN.md  01_REVIEW.md  02_PLAN.md  02_REVIEW.md  PRD.md  VERIFY.md  task.toml
.ark/tasks/archive/2026-04/codex-support/: 00_PLAN.md  00_REVIEW.md  01_PLAN.md  01_REVIEW.md  PRD.md  VERIFY.md  task.toml
.ark/tasks/archive/2026-04/spec-extract-self-contained/: PRD.md  task.toml
.claude/commands/ark/: archive.md  design.md  quick.md
.codex/skills/ark-archive/: SKILL.md
.codex/skills/ark-quick/: SKILL.md
.github/workflows/: ci.yml  claude-review.yml  release.yml
crates/ark-cli/: Cargo.toml
crates/ark-cli/src/: main.rs
crates/ark-cli/tests/: agent_lifecycle.rs  cli_help.rs  cli_upgrade.rs  upgrade.rs
crates/ark-core/: Cargo.toml
crates/ark-core/src/: error.rs  layout.rs  lib.rs  platforms.rs  templates.rs
crates/ark-core/src/commands/: init.rs  load.rs  mod.rs  remove.rs  tests_common.rs  unload.rs  upgrade.rs
crates/ark-core/src/commands/agent/: mod.rs  state.rs  template.rs
crates/ark-core/src/commands/agent/spec/: extract.rs  mod.rs  register.rs
crates/ark-core/src/commands/agent/task/: archive.rs  mod.rs  new.rs  phase.rs  promote.rs
crates/ark-core/src/commands/context/: gather.rs  mod.rs  model.rs  projection.rs  related_specs.rs  render.rs
crates/ark-core/src/io/: fs.rs  git.rs  mod.rs  path_ext.rs
crates/ark-core/src/state/: manifest.rs  mod.rs  snapshot.rs
docs/: ROADMAP.md
templates/ark/: workflow.md
templates/ark/specs/features/: INDEX.md
templates/claude/commands/ark/: archive.md  design.md  quick.md
templates/codex/skills/ark-design/: SKILL.md
templates/codex/skills/ark-quick/: SKILL.md
