[package]
name = "ark-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for the Ark agent harness CLI"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
